tekton/triggers/event-listener-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: github-webhook
  labels:
    app.kubernetes.io/managed-by: EventListener
    app.kubernetes.io/part-of: Triggers
    eventlistener: github-listener
spec:
  to:
    kind: Service
    name: el-github-listener
  port:
    targetPort: http-listener
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
